# MLOps-Assignment

./: .gitignore  Jenkinsfile  docker-compose.yml  feature_names.pkl
mlruns/0/: meta.yaml
model_training/: energy_consumption_model.pkl  requirements.txt  train_model.py
services/: README.md
services/backend/: .dockerignore  Dockerfile  app.py  pyproject.toml  requirements.txt
services/backend/mlruns/0/: meta.yaml
services/backend/mlruns/571495492638746418/: meta.yaml
services/db_service/: .dockerignore  Dockerfile  app.py  predictions.db  pyproject.toml  requirements.txt
services/frontend/: .dockerignore  Dockerfile  index.html
services/grafana/: dashboards.json  dashboards.yml
services/prometheus/: prometheus.yml
