[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-sqlalchemy>=3.1.1",
    "numpy==1.24.3",
    "pandas>=2.1.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "scikit-learn==1.2.2",
    "scipy==1.11.4",
    "waitress>=3.0.2",
]
